# modbus-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
.cargo/: config.toml
.github/workflows/: c-bindings.yml  ci.yml  go-bindings.yml  nodejs-bindings.yml  python-bindings.yml  release-nodejs-npm.yml  release-python.yml  release-wasm-npm.yml  wasm-bindings.yml
documentation/: README.md  architecture.md  feature_flags.md  go_bindings.md  quick_start.md  server_configuration.md  server_macro_phase1.md
documentation/client/: README.md  architecture.md  async.md  building_applications.md  c_bindings.md  examples.md  feature_flags.md  policies.md  quick_start.md  sync.md  wasm.md
documentation/gateway/: architecture.md  feature_flags.md  quick_start.md  ws_gateway.md
documentation/migrations/: v0.14.0-to-v0.15.0.md
documentation/server/: README.md  architecture.md  building_applications.md  examples.md  feature_flags.md  function_codes.md  macros.md  policies.md  quick_start.md  write_hooks.md
integration_tests/: Cargo.toml
integration_tests/src/: async_serial_tests.rs  async_server_tests.rs  async_tests.rs  lib.rs  mock_app.rs  serial_tests.rs  server_over_std_transport_tests.rs  server_tests.rs  tcp_tests.rs
mbus-async/: Cargo.toml  README.md
mbus-async/examples/: async_server_tcp.rs  benchmark.rs
mbus-async/src/: lib.rs
mbus-async/src/client/: client_core.rs  command.rs  decode.rs  encode.rs  mod.rs  network_client.rs  notifier.rs  response.rs  serial_client.rs  task.rs
mbus-async/src/runtime/: client_core.rs  mod.rs  network_client.rs  serial_client.rs
mbus-async/src/server/: app_handler.rs  mod.rs  session.rs  tcp_server.rs
mbus-client/: Cargo.toml  README.md
mbus-client-async/: Cargo.toml  README.md
mbus-client/src/: lib.rs
mbus-codegen/: Cargo.toml  README.md
mbus-codegen/src/: lib.rs
mbus-core/: Cargo.toml  README.md
mbus-core/src/: lib.rs
mbus-ffi/: Cargo.toml  PYPI_README.md  README.md  build.rs  cbindgen_client.toml  pyproject.toml
mbus-ffi/examples/: network_smoke.html  serial_smoke.html
mbus-ffi/examples/c_smoke_cmake/: CMakeLists.txt  main.c
mbus-ffi/go/: README.md
mbus-ffi/include/: mbus_ffi.h  mbus_ffi_feature_gated.h
mbus-ffi/nodejs/: README.md  index.d.ts  index.js  package-lock.json  (+1 more)
mbus-gateway/: Cargo.toml  README.md
mbus-macros/: Cargo.toml  README.md
mbus-network/: Cargo.toml  README.md
mbus-serial/: Cargo.toml  README.md
mbus-serial/src/: lib.rs
mbus-serial/src/management/: mod.rs  std_serial.rs  wasm_serial.rs
mbus-server/: Cargo.toml  README.md  build.rs
mbus-server-async/: Cargo.toml
mbus-server/examples/: broadcast.rs  device_id.rs  diagnostics.rs  fifo.rs  file_record.rs  full_server.rs  read_multiple_holding_registers_request.rs  read_write_registers.rs  server_map.toml  write_hooks.rs
mbus-server/src/: lib.rs
mbus-server/src/app/: app_trait.rs
mbus-server/src/services/: exception.rs  framing.rs  log_compat.rs  mod.rs  resilience.rs
mbus-server/src/services/coils/: mod.rs
mbus-server/src/services/device_info/: mod.rs
mbus-server/src/services/discrete_input/: mod.rs
mbus-server/src/services/register/: mod.rs
mbus-server/tests/: broadcast_writes_integration.rs  exception_handling_integration.rs  fc01_fc05_fc15_integration.rs  fc02_integration.rs  fc03_exception_responses.rs  fc03_validation_guards.rs  fc04_fc06_fc16_integration.rs  fc07_integration.rs  fc08_integration.rs  fc08_statistics_integration.rs  fc0b_fc0c_fc11_integration.rs  fc14_fc15_integration.rs  fc17_integration.rs  fc18_integration.rs  fc2b_integration.rs  forwarding_app_coil_delegation.rs  forwarding_app_delegation.rs  multi_map_fc03.rs  multi_map_segmented_routing.rs  resilience_integration.rs  server_services_forwarding_app_e2e.rs  unit_id_filtering.rs  write_hook_dispatch_integration.rs  write_hook_routing.rs
mbus-server/tests/common/: mod.rs
mbus-tcp/: Cargo.toml  README.md
modbus-client/: Cargo.toml
modbus-client/src/: lib.rs
modbus-client/src/app/: app_trait.rs
modbus-client/src/services/: mod.rs
modbus-client/src/services/coil/: apis.rs  mod.rs  request.rs  response.rs
modbus-client/src/services/diagnostic/: apis.rs  mod.rs  request.rs  response.rs
modbus-client/src/services/discrete_input/: apis.rs  mod.rs  request.rs  response.rs  service.rs
modbus-client/src/services/fifo_queue/: apis.rs  mod.rs  response.rs
modbus-client/src/services/file_record/: apis.rs  response.rs  service.rs
modbus-client/src/services/register/: apis.rs  mod.rs  request.rs  response.rs
modbus-core/: Cargo.toml
modbus-rs/: Cargo.toml  README.md
modbus-rs/examples/: README.md  ascii_serial_example.rs  async_serial_rtu_example.rs  async_tcp_example.rs  coils_example.rs  coils_serial_example.rs  device_id_example.rs  device_id_serial_example.rs  discrete_inputs_example.rs  discrete_inputs_serial_example.rs  feature_facades_showcase.rs  logging_example.rs  registers_example.rs  registers_serial_example.rs  tcp_backoff_jitter_example.rs  test_write_hooks_doc.rs  traffic_async_tcp_example.rs  traffic_sync_example.rs
modbus-rs/examples/client/network-tcp/async/: traffic.rs
modbus-rs/examples/client/network-tcp/sync/: backoff_jitter.rs  coils.rs  device_id.rs  discrete_inputs.rs  registers.rs  traffic.rs
modbus-rs/examples/client/serial-ascii/sync/: coils.rs
modbus-rs/examples/client/serial-rtu/sync/: backoff_jitter.rs  coils.rs  device_id.rs  discrete_inputs.rs  registers.rs
modbus-rs/examples/gateway/: custom_transport.rs
modbus-rs/examples/mbus-server/server/: showcase_coils_registers.rs  std_transport_client_demo.rs  tcp_demo.rs
modbus-rs/examples/modbus-rs/client/showcase/: feature_facades_showcase.rs
modbus-rs/examples/server/network-tcp/async/: demo.rs  fifo_file_record_demo.rs  traffic.rs
modbus-rs/examples/server/network-tcp/sync/: demo.rs  shared_state.rs
modbus-rs/examples/server/serial-ascii/sync/: demo.rs
modbus-rs/examples/server/serial-rtu/sync/: demo.rs  manual_app_no_macros.rs
modbus-rs/src/: lib.rs
scripts/: check_header.sh
xtask/: README.md
(+236 files in other folders)
