[package]
name = "integration_tests"
version = "0.5.0"
edition = "2021"
publish = false

[dependencies]
modbus-rs = { version = "0.5.0", path = "../modbus-rs", features = ["async", "serial-ascii"] }

heapless = "0.8.0"
anyhow = "1.0.86"
tokio = { version = "1", features = ["full"] }

[features]
traffic = ["modbus-rs/traffic"]

[dev-dependencies]