[package]
name = "integration_tests"
version = "0.6.0"
edition = "2021"
publish = false

[dependencies]
modbus-rs = { version = "0.6.0", path = "../modbus-rs", features = ["async", "serial-ascii"] }
mbus-core = { version = "0.6.0", path = "../mbus-core" }
mbus-server = { version = "0.6.0", path = "../mbus-server" }

heapless = "0.8.0"
anyhow = "1.0.86"
tokio = { version = "1", features = ["full"] }

[features]
default = ["coils", "holding-registers", "input-registers"]
coils = []
holding-registers = []
input-registers = []
discrete-inputs = []
traffic = ["modbus-rs/traffic", "mbus-server/traffic"]

[dev-dependencies]