[package]
name = "integration_tests"
version = "0.15.0"
edition = "2024"
publish = false

[dependencies]
modbus-rs = { version = "0.15.0", path = "../modbus-rs", features = [
    "client",
    "server",
    "gateway",
    "async",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "diagnostics-stats",
    "traffic",
    "error-trait",
] }
mbus-core = { version = "0.15.0", path = "../mbus-core", features = ["async"] }
mbus-server = { version = "0.15.0", path = "../mbus-server" }
mbus-async = { version = "0.15.0", path = "../mbus-async", optional = true }
mbus-macros = { version = "0.15.0", path = "../mbus-macros", optional = true }

heapless = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }

[features]
default = [
    "coils",
    "holding-registers",
    "input-registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "diagnostics-stats",
    "traffic",
    "async-server",
]
coils = []
registers = []
holding-registers = ["registers"]
input-registers = []
discrete-inputs = []
fifo = []
file-record = []
diagnostics = []
diagnostics-stats = ["diagnostics"]
traffic = ["modbus-rs/traffic", "mbus-server/traffic", "async-server", "mbus-async/traffic"]
async-server = [
    "dep:mbus-async",
    "dep:mbus-macros",
    "mbus-async/server-tcp",
    "mbus-async/coils",
    "mbus-async/registers",
    "registers",
    "mbus-async/discrete-inputs",
    "mbus-async/fifo",
    "mbus-async/file-record",
    "mbus-async/diagnostics",
    "mbus-async/diagnostics-stats",
    "diagnostics-stats",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]

[dev-dependencies]
