[package]
name = "mbus-async"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Async support for the modbus-rs stack, providing asynchronous traits and drivers for non-blocking Modbus communication."

[dependencies]
