[package]
name = "mbus-serial"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
mbus-core ={ workspace = true }

heapless ={ workspace = true }
serialport = { version = "4.2.2", default-features = true }
log = { workspace = true, optional = true }

[features]
default = []
logging = ["dep:log"]