[package]
name = "mbus-server"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Provides modbus server(not ready yet) functionality for modbus-rs project"

[dependencies]
