[package]
name = "modbus-rs"
version = "0.4.0"
edition = "2024"
authors = ["Raghava Ch <ch.raghava44@gmail.com>"]
license.workspace = true
repository = "https://github.com/Raghava-Ch/modbus-rs"
homepage = "https://github.com/Raghava-Ch/modbus-rs"
readme = "README.md"
keywords = ["modbus", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]
description = "Feature-gated, low-footprint Modbus client stack for no_std and std targets (MCU/RTOS/Linux/macOS/Windows) with TCP/RTU/ASCII, sync+async APIs, jittered backoff retries, and optional C/WASM bindings."

[dependencies]
mbus-core   = { workspace = true }
mbus-serial = { workspace = true, optional = true }
mbus-network    = { workspace = true, optional = true }
mbus-client = { workspace = true, optional = true }
mbus-async = { workspace = true, optional = true }

heapless = { workspace = true }
anyhow = "1.0.102"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]

[features]
# By default, all Modbus client services are enabled.
# To reduce binary size or exclude unused functionality,
# disable default features and enable only the services you need.
# These features are re-exported from the `mbus-core` crate.
default = [
    "client",
    "serial-rtu",
    "tcp",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]
client = ["mbus-client"]
serial-rtu = ["mbus-serial", "mbus-async?/serial-rtu"]
serial-ascii = ["mbus-serial", "mbus-core/serial-ascii", "mbus-async?/serial-ascii"]
tcp = ["mbus-network", "mbus-async?/tcp"]
coils = ["mbus-core/coils", "mbus-async?/coils"]
registers = ["mbus-core/registers", "mbus-async?/registers"]
discrete-inputs = ["mbus-core/discrete-inputs", "mbus-async?/discrete-inputs"]
fifo = ["mbus-core/fifo", "mbus-async?/fifo"]
file-record = ["mbus-core/file-record", "mbus-async?/file-record"]
diagnostics = ["mbus-core/diagnostics", "mbus-async?/diagnostics"]
logging = ["mbus-network?/logging", "mbus-serial?/logging", "mbus-client?/logging"]
async = ["dep:mbus-async"]
traffic = ["mbus-client?/traffic", "mbus-async?/traffic"]

[[example]]
name = "async_tcp_example"
required-features = ["async"]

[[example]]
name = "async_serial_rtu_example"
required-features = ["async", "serial-rtu"]

[[example]]
name = "traffic_sync_example"
required-features = ["traffic", "client", "tcp", "coils"]

[[example]]
name = "traffic_async_tcp_example"
required-features = ["async", "traffic", "tcp", "coils"]
